--- a/Grupo_L-war/src/main/webapp/LeerAsignaturas.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAsignaturas.xhtml
@@ -4,7 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+
 <h:head>
 	<title>Leer Asignaturas</title>
 	<h:outputStylesheet library="css" name="Layout.css"  />
@@ -31,121 +33,104 @@
 		<div class="izquierda">
 			<b> MIS DATOS </b><br></br>
 			<br></br> 
-			<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
-			<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br> 
+			<a href="LeerEncuestra.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br> 
 			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
 			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
 			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
 			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
 
-		<h:form styleClass="centro">
-			<h:dataTable styleClass="card" value="#{asignaturaBB.asignaturaAlumno}" var="a">
-				<h:column>
-					<f:facet name="header">Referencia</f:facet>
-					<h:outputText value="#{a.referencia}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Codigo</f:facet>
-					<h:outputText value="#{a.codigo}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Créditos Teoricos</f:facet>
-					<h:outputText value="#{a.creditos_Teoricos}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Créditos Practicos</f:facet>
-					<h:outputText value="#{a.creditos_Practicos}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Total_Créditos</f:facet>
-					<h:outputText value="#{a.total_Creditos}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Ofertada</f:facet>
-					<h:outputText value="#{a.ofertada}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Nombre</f:facet>
-					<h:outputText value="#{a.nombre}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Curso</f:facet>
-					<h:outputText value="#{a.curso}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Plazas</f:facet>
-					<h:outputText value="#{a.plazas}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Cuatrimestre</f:facet>
-					<h:outputText value="#{a.cuatrimestre}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Idioma de imparticion</f:facet>
-					<h:outputText value="#{a.idioma_de_imparticion}" />
-				</h:column>
-			</h:dataTable>
+		<h:form>
+			<div class="izquierdaCentro">
+				<b>Asignaturas: </b> <br></br>
+			</div>
+			
+			<p:commandButton value="Mostar" actionListener="#{asignaturaBB.asignaturaAlumno}" update="dtAsig" />
+				
+			<p:dataTable styleClass="card" id="dtAsig" value="#{asignaturaBB.asignaturaAlumno}" var="a">
+				<p:column headerText="Referencia" filterBy="#{a.referencia}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.referencia}" />
+				</p:column>
+				<p:column headerText="Codigo" filterBy="#{a.codigo}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.codigo}" />
+				</p:column>
+				<p:column headerText="Créditos Teoricos" filterBy="#{a.creditos_Teoricos}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.creditos_Teoricos}" />
+				</p:column>
+				<p:column headerText="Créditos Practicos" filterBy="#{a.creditos_Practicos}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.creditos_Practicos}" />
+				</p:column>
+				<p:column headerText="Total Créditos" filterBy="#{a.total_Creditos}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.total_Creditos}" />
+				</p:column>
+				<p:column headerText="Ofertada" filterBy="#{a.ofertada}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.ofertada}" />
+				</p:column>
+				<p:column headerText="Nombre" filterBy="#{a.nombre}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.nombre}" />
+				</p:column>
+				<p:column headerText="Curso" filterBy="#{a.curso}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.curso}" />
+				</p:column>
+				<p:column headerText="Plazas" filterBy="#{a.plazas}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.plazas}" />
+				</p:column>
+				<p:column headerText="Cuatrimestre" filterBy="#{a.cuatrimestre}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.cuatrimestre}" />
+				</p:column>
+				<p:column headerText="Idioma de imparticion" filterBy="#{a.idioma_de_imparticion}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.idioma_de_imparticion}" />
+				</p:column>
+			</p:dataTable>
 		</h:form>
-
 	</ui:fragment >
 
-
-
 	<ui:fragment rendered="#{not empty infoSesion.personal}">
-		<h:form styleClass="centrado">
-			<h:dataTable styleClass="card" value="#{asignaturaBB.asignaturas}" var="a">
-				<h:column>
-					<f:facet name="header">Referencia</f:facet>
-					<h:outputText value="#{a.referencia}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Codigo</f:facet>
-					<h:outputText value="#{a.codigo}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Créditos Teoricos</f:facet>
-					<h:outputText value="#{a.creditos_Teoricos}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Créditos Practicos</f:facet>
-					<h:outputText value="#{a.creditos_Practicos}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Total_Créditos</f:facet>
-					<h:outputText value="#{a.total_Creditos}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Ofertada</f:facet>
-					<h:outputText value="#{a.ofertada}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Nombre</f:facet>
-					<h:outputText value="#{a.nombre}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Curso</f:facet>
-					<h:outputText value="#{a.curso}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Plazas</f:facet>
-					<h:outputText value="#{a.plazas}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Cuatrimestre</f:facet>
-					<h:outputText value="#{a.cuatrimestre}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Idioma de imparticion</f:facet>
-					<h:outputText value="#{a.idioma_de_imparticion}" />
-				</h:column>
-				<h:column>
-					<h:commandLink value="Eliminar" action="#{asignaturaBB.getEliminar}" /> 
-				</h:column>
+		<h:form>
+			<div class="izquierdaCentro">
+				<b>Asignaturas: </b> <br></br>
+			</div>
+			
+			<p:commandButton value="Mostar" actionListener="#{asignaturaBB.asignaturas}" update="dtAsignaturas" />
 				
-			</h:dataTable>
+			<p:dataTable styleClass="card" id="dtAsignaturas" value="#{asignaturaBB.asignaturas}" var="a">
+				<p:column headerText="Referencia" filterBy="#{a.referencia}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.referencia}" />
+				</p:column>
+				<p:column headerText="Codigo" filterBy="#{a.codigo}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.codigo}" />
+				</p:column>
+				<p:column headerText="Créditos Teoricos" filterBy="#{a.creditos_Teoricos}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.creditos_Teoricos}" />
+				</p:column>
+				<p:column headerText="Créditos Practicos" filterBy="#{a.creditos_Practicos}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.creditos_Practicos}" />
+				</p:column>
+				<p:column headerText="Total Créditos" filterBy="#{a.total_Creditos}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.total_Creditos}" />
+				</p:column>
+				<p:column headerText="Ofertada" filterBy="#{a.ofertada}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.ofertada}" />
+				</p:column>
+				<p:column headerText="Nombre" filterBy="#{a.nombre}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.nombre}" />
+				</p:column>
+				<p:column headerText="Curso" filterBy="#{a.curso}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.curso}" />
+				</p:column>
+				<p:column headerText="Plazas" filterBy="#{a.plazas}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.plazas}" />
+				</p:column>
+				<p:column headerText="Cuatrimestre" filterBy="#{a.cuatrimestre}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.cuatrimestre}" />
+				</p:column>
+				<p:column headerText="Idioma de imparticion" filterBy="#{a.idioma_de_imparticion}" filterMatchMode="contains">
+					<p:outputLabel value="#{a.idioma_de_imparticion}" />
+				</p:column>
+			</p:dataTable>
 		</h:form>
 		
 		<div class="importarMatricula">
