--- a/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
@@ -17,18 +17,28 @@
 	
 	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.personal.rango}"/>.</p></div>
 	
-	<h:form>
-	<div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div>
-	</h:form>
+	<h:form><div class="cerrar"> <h:commandLink action="#{infoSesion.invalidarSesion()}">Cerrar Sesion</h:commandLink> </div> </h:form>
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 
 	<h1 class="titulo"> IMPORTAR MATRICULA </h1>
 
 	<div class="centrado">	
+		<div class="importarMatricula">
+				<h:button value="ATRAS" outcome="LeerMatricula.xhtml" />
+		</div>
+		<br />
+			
 	    <h:form enctype="multipart/form-data">
-			<p:fileUpload value="#{fileUploadView.file}" mode="simple" skinSimple="true"/>
-            <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.uploadMatricula}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
-            <p:growl id="messages" showDetail="true"/>
+			<p:growl id="messages" showDetail="true"/>
+       		 <p:fileUpload mode="advanced"
+                      multiple="false"
+                      sizeLimit="10240000" allowTypes="/(\.|\/)(xlsx)$/"
+                      invalidSizeMessage="Maximum file size allowed is 10 MB"
+                      invalidFileMessage="Solo se permite el tipo XLSX "
+                      update="messages cropperPanel"
+                      listener="#{uploadMatricula.handleFileUpload}"/>
+                      
+             <p:outputPanel id="cropperPanel"></p:outputPanel>
 		</h:form>
 	</div>
 
