--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -32,21 +32,18 @@
 		<div class="izquierda">
 			<b> MIS DATOS </b><br></br>
 			<br></br> 
-			<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
-			<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br> 
+			<a href="LeerEncuestra.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br> 
 			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
 			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
 			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
 			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
 		
 		<div class="centro">
-		 	<div class="izquierdaCentro">
-				<b>Titulaciones: </b> <br></br>
-			</div>
-			
+		 	
 			<h:form id="expediente">
             	<p:commandButton value="Mostar" actionListener="#{alumnoBB.alumno}" update="dtAlumno" />
 				
@@ -112,6 +109,10 @@
 
 	<ui:fragment rendered="#{not empty infoSesion.personal}">
 		<h:form styleClass="centrado">
+			<div class="izquierdaCentro">
+				<b>Alumnos: </b> <br></br>
+			</div>
+			
 			<p:commandButton value="Mostar" actionListener="#{alumnoBB.alumnos}" update="dtAlumnos" />
 	
 			<p:dataTable id="dtAlumnos" value="#{alumnoBB.alumnos}" var="a">
