--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -45,10 +45,10 @@
                 <p:outputLabel for="@next" value="Basic"/>
                 <p:selectOneMenu id="option" value="#{exportar.selectedOption}">
                     <f:selectItem itemLabel="Titulaciones" itemValue=""/>
-                    <f:selectItem itemLabel="Ingeniería Informática" itemValue="1703"/>
+                    <f:selectItem itemLabel="Ingeniería Informática" itemValue="1041"/>
                     <f:selectItem itemLabel="Ingeniería del Software" itemValue="1042"/>
-                    <f:selectItem itemLabel="Ingeniería de la Salud" itemValue="1043"/>
-                    <f:selectItem itemLabel="Ingeniería de Computadores" itemValue="1056"/>
+                    <f:selectItem itemLabel="Ingeniería de Computadores" itemValue="1043"/>
+                    <f:selectItem itemLabel="Ingeniería de la Salud" itemValue="1056"/>
                     <f:selectItem itemLabel="Ingeniería Informatica y Matemáticas" itemValue="1073"/>
                     <f:facet name="footer">
                         <p:divider styleClass="p-mt-0" />
@@ -60,7 +60,7 @@
 		
 		<br></br><br></br>
 		
-		 <h:commandButton action="#{exportar.exDatos()}">EXPORTAR</h:commandButton> 
+		<p:commandButton action="#{exportar.exDatos}">EXPORTAR</p:commandButton> 
 		</div>
 	</h:form>
 	
@@ -73,12 +73,7 @@
     </p:dialog>
 
     <h:form>
-        <p:commandButton value="Download" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);"
-                         icon="pi pi-arrow-down" styleClass="p-mr-2">
-            <p:fileDownload value="#{fileDownloadView.file}"/>
-        </p:commandButton>
-
-        <p:commandButton value="Ajax Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
+        <p:commandButton value="Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
             <p:fileDownload value="#{fileDownloadView.file}"/>
         </p:commandButton>
     </h:form>
