--- a/Grupo_L-war/src/main/webapp/Login.xhtml
+++ b/Grupo_L-war/src/main/webapp/Login.xhtml
@@ -33,7 +33,7 @@
 					value="#{loginBB.usuario.contrasenia}" />
 				<h:message for="pass" />
 
-				<h:commandButton value="Entrar" action="#{loginBB.entrar()}" /> 
+				<h:commandButton id="entrar" value="Entrar" action="#{loginBB.entrar()}" /> 
 				
 				<a href="GenerarNuevaContrasena.xhtml">¿Has olvidado tu contraseña?</a>
 
