--- a/Grupo_L-war/src/main/webapp/index.xhtml
+++ b/Grupo_L-war/src/main/webapp/index.xhtml
@@ -18,7 +18,7 @@
 	
 	<div class="centrado">
 		<h1> BIENVENIDO </h1>
-		<h:button value="Iniciar sesion" outcome="Login.xhtml"/>
+		<h:button id="inicio" value="Iniciar sesion" outcome="Login.xhtml"/>
 	</div>
 
 	<div class="pie"> 
