--- a/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
@@ -73,16 +73,18 @@
 		<h:selectOneMenu id="asignatura" value="#{solicitar.asig}">
 			<f:selectItem itemLabel="--Seleccione asignatura--" itemValue=""/>
    			 <f:selectItems value="#{solicitar.asignaturas}"
-   			 var="a" itemLabel="#{a.nombre}" />    			  
+   			 var="a" itemLabel="#{a.nombre}" itemValue="#{a.referencia}"/>    			  
 		</h:selectOneMenu><br></br>		
 		<br></br>
 		
 		
 		<label for="asig">Motivo:</label>
-		<textarea name="comentarios" rows="10" cols="40"></textarea><br></br>
+		<textarea name="comentarios" rows="10" cols="40" required="required" />
+		
+		<br></br>
 		
 		<br></br><br></br>
-		
+		<h:commandButton id="cancelar" value="Cancelar" action="#{solicitar.atras()}" />
 		<h:commandButton id="aceptar" value="Aceptar" action="#{solicitar.asigna()}" />
 		
     </h:form>
