--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -60,24 +60,27 @@
 		
 		<br></br><br></br>
 		
-		<p:commandButton action="#{exportar.exDatos}">EXPORTAR</p:commandButton> 
+		<p:commandButton value="EXPORTAR" action="#{exportar.exDatos}"></p:commandButton> 
+		
+		<p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false"
+              resizable="false">
+              <i class="pi pi-spinner pi-spin" style="font-size:3rem"></i>
+    </p:dialog>
+
+   
+        <p:commandButton value="Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
+            <p:fileDownload value="#{fileDownloadView.file}"/>
+        </p:commandButton>
+		
 		</div>
 	</h:form>
 	
 
 
-<div class="card">
-    <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false"
-              resizable="false">
-              <i class="pi pi-spinner pi-spin" style="font-size:3rem"></i>
-    </p:dialog>
 
-    <h:form>
-        <p:commandButton value="Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
-            <p:fileDownload value="#{fileDownloadView.file}"/>
-        </p:commandButton>
-    </h:form>
-</div>
+    
+    
+
 
 	<div class="pie"> 
 		Universidad de Málaga · Avda. Cervantes, 2. 29071 MÁLAGA · Tel. 952131000 · info@uma.es	
