--- a/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
@@ -28,16 +28,15 @@
 	<h1 class="titulo">Matricula</h1>
 
 	<ui:fragment rendered="#{not empty infoSesion.alumno}">
-		<div class="izquierda">
-			<b>MIS DATOS </b><br></br>
-			<br></br> 
-			<a href="#" style="text-decoration: none">Leer Encuesta</a><br></br>
-			<a href="#" style="text-decoration: none">Leer Asignatura Matricula</a><br></br> 
+		<div class="izquierda"   >
+			<b>MIS DATOS </b><br></br><br></br> 
+			<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
 			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
 			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
 			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
 			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
 
