--- a/Grupo_L-war/src/main/webapp/Login.xhtml
+++ b/Grupo_L-war/src/main/webapp/Login.xhtml
@@ -16,7 +16,7 @@
 
 	<h1 class="titulo">FLM-SECRETARIA</h1>
 
-	<div class="izquierda"> <img src="resources/imagenes/logo.jpg" width="400" /> </div>
+	<div class="izquierda"> <img src="resources/imagenes/logoFLM.png" width="400" /> </div>
 
 	<div class="centro">
 		<h:form>
