--- a/Grupo_L-war/src/main/webapp/GenerarNuevaContrasena.xhtml
+++ b/Grupo_L-war/src/main/webapp/GenerarNuevaContrasena.xhtml
@@ -18,7 +18,7 @@
 
 	<h1 class="titulo">Recuperar contraseña</h1>
 
-	<div class="izquierda"> <img src="resources/imagenes/logo.jpg" width="400" /> </div>
+	<div class="izquierda"> <img src="resources/imagenes/logoFLM.png" width="400" /> </div>
 
 	<div class="centro">
 		<h:form>			
