Rellenar encuesta listo

--- a/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
@@ -62,8 +62,8 @@
 		</h:selectOneMenu>
 		<br></br><br></br>
 
-
-		<p:commandButton action="#{encuesta.aceptarEncuesta}">Aceptar</p:commandButton> 
+		<p:commandButton value="Enviar" action="#{encuesta.aceptarEncuesta}"></p:commandButton> 
+		<a>  </a>
 		<p:commandButton id="cancelar" value="Cancelar" action="#{encuesta.atras}" /> 
 		
 		
