--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -30,7 +30,7 @@
 	<ui:fragment rendered="#{not empty infoSesion.alumno}">
 		<div class="izquierda"   >
 			<b>MIS DATOS </b><br></br><br></br> 
-			<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
+			<a id="leerEncuesta" href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
 			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
 			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
 			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
@@ -54,7 +54,7 @@
 			<h:button value="Grupos" outcome="LeerGrupo.xhtml" /> <br></br><br></br>
 			<h:button value="Expediente" outcome="LeerExpediente.xhtml" /> <br></br><br></br>
 			<h:button value="Titulacion" outcome="LeerTitulacion.xhtml" /> <br></br><br></br>
-			<h:button value="Encuesta" outcome="LeerEncuesta.xhtml" /> <br></br><br></br>
+			<h:button id="leerEncuesta" value="Encuesta" outcome="LeerEncuesta.xhtml" /> <br></br><br></br>
 			<h:button value="Asignaturas" outcome="LeerAsignaturas.xhtml" /> <br></br><br></br>
 			<h:button value="Centro" outcome="LeerCentro.xhtml" /> <br></br><br></br>
 			<h:button value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" /><br></br><br></br>
