--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -31,13 +31,13 @@
 		<div class="izquierda"   >
 			<b>MIS DATOS </b><br></br><br></br> 
 			<a id="leerEncuesta" href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
-			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
-			<a href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
-			<a href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
-			<a href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
-			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
-			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
-			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
+			<a id="leerAsigMa" href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
+			<a id="leerMatricula" href="LeerMatricula.xhtml" style="text-decoration: none">Leer Matricula</a><br></br> 
+			<a id="leerTitulacion" href="LeerTitulacion.xhtml" style="text-decoration: none">Leer Titulacion</a><br></br> 
+			<a id="leerAlumnos" href="LeerAlumnos.xhtml" style="text-decoration: none">Leer Usuario</a><br></br> 
+			<a id="leerAsignaturas" href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
+			<a id="leerClase" href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
+			<a id="leerExpediente" href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
 	
 	
@@ -49,17 +49,17 @@
 	
 	<ui:fragment rendered="#{not empty infoSesion.personal}">		
 		<div class="centrado" >
-			<h:button value="Alumnos" outcome="LeerAlumnos.xhtml" /> <br></br><br></br>
-			<h:button value="Matricula" outcome="LeerMatricula.xhtml" /> <br></br><br></br>
-			<h:button value="Grupos" outcome="LeerGrupo.xhtml" /> <br></br><br></br>
-			<h:button value="Expediente" outcome="LeerExpediente.xhtml" /> <br></br><br></br>
-			<h:button value="Titulacion" outcome="LeerTitulacion.xhtml" /> <br></br><br></br>
+			<h:button id="leerAlumnos" value="Alumnos" outcome="LeerAlumnos.xhtml" /> <br></br><br></br>
+			<h:button id="leerMatricula" value="Matricula" outcome="LeerMatricula.xhtml" /> <br></br><br></br>
+			<h:button id="leerGrupo" value="Grupos" outcome="LeerGrupo.xhtml" /> <br></br><br></br>
+			<h:button id="leerExpediente" value="Expediente" outcome="LeerExpediente.xhtml" /> <br></br><br></br>
+			<h:button id="leerTitulacion" value="Titulacion" outcome="LeerTitulacion.xhtml" /> <br></br><br></br>
 			<h:button id="leerEncuesta" value="Encuesta" outcome="LeerEncuesta.xhtml" /> <br></br><br></br>
-			<h:button value="Asignaturas" outcome="LeerAsignaturas.xhtml" /> <br></br><br></br>
-			<h:button value="Centro" outcome="LeerCentro.xhtml" /> <br></br><br></br>
-			<h:button value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" /><br></br><br></br>
-			<h:button value="Exportar Datos" outcome="ExportarDatos.xhtml" /><br></br><br></br>
-			<h:button value="Importar Horario" outcome="ImportarHorario.xhtml" />
+			<h:button id="leerAsignaturas" value="Asignaturas" outcome="LeerAsignaturas.xhtml" /> <br></br><br></br>
+			<h:button id="leerCentro" value="Centro" outcome="LeerCentro.xhtml" /> <br></br><br></br>
+			<h:button id="leerAsigMa" value="Asignatura-Matricula" outcome="LeerAsignaturaMatricula.xhtml" /><br></br><br></br>
+			<h:button id="exportarDatos" value="Exportar Datos" outcome="ExportarDatos.xhtml" /><br></br><br></br>
+			<h:button id="importarHorario" value="Importar Horario" outcome="ImportarHorario.xhtml" />
 		</div>
 	</ui:fragment>
 	
